# csv_parser_test_task

./: README.md  README.nd  database.db  main.py  pyproject.toml  requirements.txt
script/: db_helper.py  script_avg_rating.py
tests/: test_db_helper.py
